tests/passes/well-formed/ref-type-mismatch.expect
---STDERR---
Error: tests/passes/well-formed/ref-type-mismatch.futil
33 |      invoke f[m = k1]()();
   |      ^^^^^^^^^^^^^^^^^^^^^ Malformed Control: The type passed in `std_reg(16)` is not a subtype of the expected type `std_reg(32)`.
